--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
